# ibm_ai_gen_app

./: app.py  capital.py  config.py  lab-instructions.md  llm_test.py  main.py  model.py  pyproject.toml  requirments.txt
templates/: index.html
