[project]
name = "flask-ai-gen-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.137.2",
    "ibm-watsonx-ai==1.3.39",
    "jinja2>=3.1.6",
    "langchain>=1.3.10",
    "langchain-groq>=1.1.3",
    "langchain-ibm>=1.0.11",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.49.0",
]
